--- a/index.css
+++ b/index.css
@@ -21,7 +21,7 @@
     text-align: center;
     font-size: 40px;
     font-weight: bold;
-    color: orangered;
+    color: magenta;
     padding-bottom: 50px;
 }
 
@@ -111,4 +111,20 @@
 .footer-icon {
     width: 50px;
     height: 50px;
+}
+
+.Yellow {
+    color: yellow;
+}
+
+.Cyan {
+    color: cyan;
+}
+
+.Bold {
+    font-weight: bold;
+}
+
+.Blue {
+    color: blue;
 }
